--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="./files/logo.png"  type="image/gif" sizes="16x16">
 	<title>Aravind Holidays | best in service</title>
-	<!--Custom files-->
+	<!--Local files-->
 	<link rel="stylesheet" href="./files/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./files/style.css">
 	<script src="./files/jquery.min.js.download"></script>
